--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-          <h2>Web chat</h2>
+          <h2>Web Chat</h2>
           <h4>Start Chatting by clicking "Chat Now"</h4>
           <button id="firstBtn" type="button" name="button" class="text-uppercase btn btn-chat-now btn-lg animated bounce">Chat Now</button>
           <br/><br/>
