3rd message appears in the correct place; add some styling

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
           <h2>Web Chat</h2>
-          <h4>Start Chatting by clicking "Chat Now"</h4>
+          <h4 class="start-chat">Start Chatting by clicking "Chat Now"</h4>
           <button id="firstBtn" type="button" name="button" class="text-uppercase btn btn-chat-now btn-lg animated bounce">Chat Now</button>
           <br/><br/>
 
@@ -31,9 +31,9 @@
             <!-- Hi, I was trying to find out how I can change my Internet Banking password. Can you please tell me where I can find the menu please? -->
 
             <h4 id="mary-reply" class="text-justify" style="display: none;">Mary : "To reset your password just click on the My details menu. Once you have clicked the menu, a new page will appear. Select the link Change password. From this link it will take you to a screen where you can change your password."</h4>
-            <br/><br/>
+            <br/>
           </div>
-          <br/><br/>
+          <br/>
 
           <div class="form-group">
             <input id="entered_chat" class="form-control" type="text" placeholder="Please enter your question" />
