--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-          <h2>Web Chat</h2>
+          <h1>Web Chat</h1>
           <h4 class="start-chat">Start Chatting by clicking "Chat Now"</h4>
           <button id="firstBtn" type="button" name="button" class="text-uppercase btn btn-chat-now btn-lg animated bounce">Chat Now</button>
           <br/><br/>
@@ -46,6 +46,9 @@
       </div>
     </div>
 
+    <footer>
+      <p class="text-center text-uppercase">By Amanda Sam | All Right Reserved 2017</p>
+    </footer>
 
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
