--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@
 
           <img class="img-responsive" src="img/chat-box.png" alt="chat" style="width:100%;"><br/>
           <div class="centered">
-            <h4 id="statement" class="text-justify" style="display: none;">Mary : "Hi Nicholas. This is Mary from Abank. How may I help you today?"</h4><br/>
+            <h4 id="statement" class="text-justify chat-h4" style="display: none;">Mary : "Hi Nicholas. This is Mary from Abank. How may I help you today?"</h4>
 
-            <h4 id="user-statement" class="text-justify"></h4><br/>
+            <h4 id="user-statement" class="text-justify chat-h4"></h4>
             <!-- Nicholas will type the following: -->
             <!-- Hi, I was trying to find out how I can change my Internet Banking password. Can you please tell me where I can find the menu please? -->
 
-            <h4 id="mary-reply" class="text-justify" style="display: none;">Mary : "To reset your password just click on the My details menu. Once you have clicked the menu, a new page will appear. Select the link Change password. From this link it will take you to a screen where you can change your password."</h4>
-            <br/>
+            <h4 id="mary-reply" class="text-justify chat-h4" style="display: none;">Mary : "To reset your password just click on the My details menu. Once you have clicked the menu, a new page will appear. Select the link Change password. From this link it will take you to a screen where you can change your password."</h4>
           </div>
           <br/>
 
